--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.11",
+    "@angular/cdk": "^12.0.5",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^12.0.5",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-material-datepicker": "^1.0.2",
     "core-js": "^2.4.1",
+    "datepicker": "^0.0.0",
     "git": "^0.1.5",
+    "material": "^0.4.3",
+    "ngx-mat-datetime-picker": "^3.0.0",
+    "project-root-directory": "^1.0.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
